Fixed col classes for mobile
Primarily fixed col classes that broke at 480px width and below. Added a
property that allowed word wrap in the 1-4 classes so that the heading
didn't bleed out when the word was too long. Changed the row after
declaration from content: " " to content: ""

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         	<section class="col-1-4">
             	<div>
                     <header>
-                        <h3 class="txt-uppercase">Researching</h3>
+                        <h3 class="txt-uppercase">Researching</h3> <!-- bleeds out of box at certain widths-->
                     </header>
                     <p>Molestie suscipiantur concludaturque cu has, nam ne omnesque antiopam, indoctum complectitur pro ad. Ea cum diam malorum vivendum, vel quod commodo repudiandae et.</p>
                 </div>
